Fix weird missing margins in titles in markdown descriptions of projects

--- a/web/static/less/style.less
+++ b/web/static/less/style.less
@@ -285,6 +285,9 @@ iframe {
 		text-decoration: underline;
 	    }
 	}
+	h1, h2, h3, h4, h6 {
+	    line-height: 150%;
+	}
     }
     .buttons {
 	text-align: center;
